Fix spacing in Menu section

--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ section {
 }
 
 section:first-of-type {
-  padding: 0;
+  padding: 0px 0 100px;
 }
 
 section:nth-of-type(2) {
@@ -51,5 +51,8 @@ section:nth-of-type(2) {
   }
   section {
     padding: 100px 0;
+  }
+  section:first-of-type {
+    padding: 50px 0 30px;
   }
 }
